# py-observability

./: .gitignore  README.md  pyproject.toml
examples/: fastapi_app.py  fastapi_demo.py  flask_app.py  flask_demo.py  flask_pushgateway.py  strategy_example.py
src/sre_observability/: __init__.py  config.py  core.py  setup.py
src/sre_observability/metrics/: __init__.py  http.py  pushgateway.py  runtime.py
src/sre_observability/middleware/: __init__.py  fastapi.py  flask.py
src/sre_observability/strategy/: __init__.py  alerts.py  context.py  metrics.py  registry.py
src/sre_observability/tracing/: __init__.py  setup.py
